--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import 'shared/style/var.scss';
+
 .app {
   &__container {
     min-height: 100vh;
@@ -8,6 +10,9 @@
 
   &__main {
     height: calc(100vh - 6.5rem);
+    margin-top: $header-height;
     position: relative;
+    display: flex;
+    width: 100%;
   }
 }
