--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,11 +4,13 @@
   color: #fff;
   height: $header-height;
   display: flex;
+  position: fixed;
+  top: 0;
   justify-content: flex-start;
   padding: 0.8rem;
   width: 100%;
   background-color: #6342b4;
-  // overflow-y: auto;
+  z-index: 10;
 
   &__switch-block {
     position: relative;
