--- a/src/pages/Cards/Cards.scss
+++ b/src/pages/Cards/Cards.scss
@@ -5,7 +5,11 @@
   overflow-x: hidden;
 
   &__top {
+    margin-top: 15px;
     margin-bottom: 30px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
 
   &__wrapper {
@@ -15,5 +19,9 @@
     padding: 0 10px;
     width: 100%;
     flex-wrap: wrap;
+  }
+
+  &__pagination-bottom {
+    margin-top: 15px;
   }
 }
