added Button component & hide card functionality

--- a/src/components/ToggleButton/ToggleButton.scss
+++ b/src/components/ToggleButton/ToggleButton.scss
@@ -99,4 +99,15 @@
     opacity: 1;
     right: 10px;
   }
+
+  &__switch {
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 10px;
+    cursor: pointer;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+  }
 }
