--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -14,10 +14,10 @@
     padding: 0;
   }
 
-  &__divider {
-    min-width: 100%;
-    height: 1px;
-    background-color: #fff;
-    margin: 20px 0;
-  }
+  // &__divider {
+  //   min-width: 100%;
+  //   height: 1px;
+  //   background-color: #fff;
+  //   margin: 20px 0;
+  // }
 }
