--- a/src/pages/Cards/Card/Card.scss
+++ b/src/pages/Cards/Card/Card.scss
@@ -19,7 +19,11 @@
     bottom: 0;
     width: 100%;
     line-height: 1.3;
-    padding: 8px 16px !important;
+    padding: 4px 4px !important;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
   }
 
   &__title {
@@ -27,5 +31,6 @@
     overflow: hidden;
     width: 100%;
     white-space: nowrap;
+    margin-bottom: 0 !important;
   }
 }
