--- a/src/pages/Cards/SortCards/SortCards.scss
+++ b/src/pages/Cards/SortCards/SortCards.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-right: 10px;
 
   &__item {
     margin-left: 5px;
