--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -7,10 +7,10 @@
   bottom: 0;
   width: 100%;
   height: 4rem;
+  padding: 0.625rem;
 
   &__wrapper {
-    width: 100%;
-    margin: 0 auto;
+    width: max-content;
     padding: 0;
   }
 
