--- a/src/pages/Cards/Card/Card.scss
+++ b/src/pages/Cards/Card/Card.scss
@@ -7,12 +7,16 @@
   z-index: 100;
 
   &__img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -71%);
-    height: 140px;
-    object-fit: cover;
+    position: relative;
+    height: 140px !important;
+
+    img {
+      position: absolute !important;
+      top: 50% !important;
+      left: 50% !important;
+      transform: translate(-50%, -51%) !important;
+      object-fit: cover !important;
+    }
   }
 
   &__body {
