--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -8,16 +8,10 @@
   width: 100%;
   height: 4rem;
   padding: 0.625rem;
+  z-index: 100;
 
   &__wrapper {
     width: max-content;
     padding: 0;
   }
-
-  // &__divider {
-  //   min-width: 100%;
-  //   height: 1px;
-  //   background-color: #fff;
-  //   margin: 20px 0;
-  // }
 }
