--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;500;700;800&display=swap');
+@import 'shared/style/var.scss';
 
 #root .rc-pagination {
   display: flex;
   flex-wrap: wrap;
+
+  @include max-width-mobile {
+    padding: 0;
+  }
 
   &>li {
     cursor: pointer;
@@ -18,6 +23,10 @@
     margin-left: 1px;
     background-color: rgb(238, 239, 243);
     outline: none;
+
+    @include max-width-mobile {
+      margin-bottom: 3px;
+    }
   }
 
   &>li>a {
@@ -67,6 +76,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow: overlay;
   line-height: 1.42857143;
+}
+
+html,
+body {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
 }
 
 code {
